# PPT2MD

./: .gitignore  DEVELOPMENT_PLAN.md  PROGRESS.md  README.md  compare_roundtrip.py  ori.pptx  output.html  ppt2html.py  pyproject.toml  test_all_features.md
ppt2md/: __init__.py  __main__.py  main.py
ppt2md/converter/: __init__.py  batch.py  error_handler.py  filter_utils.py  format_utils.py  frontmatter.py  html.py  list_utils.py  metadata.py  position_utils.py  reverse.py  sort_utils.py
ppt2md/parser/: __init__.py  background.py  chart.py  chart_export.py  formula.py  image.py  media.py  notes.py  placeholder.py  presentation.py  sections.py  smartart.py  table.py  text.py
tests/: conftest.py  test_integration.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase16.py  test_phase17.py  test_phase18.py  test_phase19.py  test_phase2.py  test_phase20.py  test_phase21.py  test_phase22.py  test_phase23.py  test_phase24.py  test_phase25.py  test_phase26.py  test_phase27.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_ppt2html.py
